# AutoAgents

./: Cargo.toml
crates/autoagents-toolkit/src/tools/document_parsing/: mod.rs  parse_document.rs
crates/autoagents-toolkit/src/tools/document_parsing/examples/: mod.rs
crates/autoagents-toolkit/src/tools/document_parsing/parsers/: docx.rs  pptx.rs  xml.rs
